[project]
name = "fastfetchbot"
version = "0.1.0"
description = ""
authors = [
    { name = "Jichen Jiang", email = "enturreopy@gmail.com" },
    { name = "Zhen Zhong", email = "auroradysis@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru>=0.7.2,<0.8.0",
    "fastapi>=0.115.12,<0.116.0",
    "sentry-sdk[fastapi]>=2.27.0,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "lxml>=5.4.0,<6.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-telegram-bot[callback-data,rate-limiter]>=21.11,<22.0",
    "fake-useragent>=1.5.1,<2.0.0",
    "jmespath>=1.0.1,<2.0.0",
    "playwright>=1.52.0,<2.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "babel>=2.17.0,<3.0.0",
    "openai>=2.15.0,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "uvicorn>=0.34.2,<0.35.0",
    "aiofiles>=24.1.0,<25.0.0",
    #"twitter-api-client>=0.10.22,<0.11.0",
    "twitter-api-client-v2>=0.1.1,<0.2.0",
    "atproto>=0.0.61,<0.0.62",
    "pillow>=10.0.0,<11.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "pydub>=0.25.1,<0.26.0",
    "xhtml2pdf>=0.2.17,<0.3.0",
    "aioboto3>=13.4.0,<14.0.0",
    "beanie>=1.29.0,<2.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "markdown>=3.8,<4.0",
    "asyncpraw>=7.8.1,<8.0.0",
    "html-telegraph-poster-v2>=0.2.5,<0.3.0",
    "firecrawl-py>=4.13.0,<5.0.0",
    "zyte-api>=0.8.1,<0.9.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "fastfetchbot-shared",
    "fastfetchbot-file-export",
]

[project.optional-dependencies]
windows = ["python-magic-bin>=0.4.14,<0.5.0"]

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "celery-types>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["packages/FastFileExporter"]

[tool.uv.sources]
fastfetchbot-shared = { workspace = true }
fastfetchbot-file-export = { workspace = true }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
