[project]
name = "fastfetchbot-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastfetchbot-shared[scrapers]",
    "fastapi>=0.115.12",
    "sentry-sdk[fastapi]>=2.27.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.2",
    "babel>=2.17.0",
    "beanie>=1.29.0",
    "pillow>=10.0.0",
    "pydub>=0.25.1",
    "xhtml2pdf>=0.2.17",
    "aioboto3>=13.4.0",
    "celery[redis]>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false

[tool.uv.sources]
fastfetchbot-shared = { workspace = true }
