[project]
name = "fastfetchbot-async-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastfetchbot-shared[scrapers,mongodb]",
    "arq>=0.26.1",
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["async_worker"]

[tool.uv]
package = false

[tool.uv.sources]
fastfetchbot-shared = { workspace = true }
