[project]
name = "fastfetchbot-telegram-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastfetchbot-shared",
    "python-telegram-bot[callback-data,rate-limiter]>=21.11",
    "starlette>=0.45.0",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "beanie>=1.29.0",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv]
package = false

[tool.uv.sources]
fastfetchbot-shared = { workspace = true }
