[project]
name = "fastfetchbot-telegram-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastfetchbot-shared[postgres,migrate]",
    "python-telegram-bot[callback-data,rate-limiter]>=22.7",
    "starlette>=0.45.0",
    "uvicorn>=0.34.2,<0.47.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "aiofiles>=24.1.0",
    "arq>=0.26.1",
    "redis[hiredis]>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.uv]
package = false

[tool.uv.sources]
fastfetchbot-shared = { workspace = true }
