[project]
name = "fastfetchbot-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastfetchbot-file-export",
    "fastfetchbot-shared",
    "celery[redis]>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_core"]

[tool.uv]
package = false

[tool.uv.sources]
fastfetchbot-file-export = { workspace = true }
fastfetchbot-shared = { workspace = true }
